--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,8 @@ cython_debug/
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/**/vcs.xml
+.idea/**/misc.xml
+/.idea/inspectionProfiles/profiles_settings.xml
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -238,3 +240,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
